syntax = "proto3";

option go_package = "github.com/krissukoco/go-microservices-marketplace/proto/auth";

package auth;

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string id = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
}

message RefreshRequest {
    string token = 1;
}

message RefreshResponse {
    string id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
}

message ChangePasswordRequest {
    string id = 1;
    string old_password = 2;
    string new_password = 3;
}

message ChangePasswordResponse {
    int64 status = 1;
}

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Refresh (RefreshRequest) returns (RefreshResponse) {}
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {}
}

